# LMent

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md
.github/workflows/: super-linter.yml
assets/widgets/: main_menu.json
content_source/: game_texture.kra
doc/: communication_round_robin.md  event_handling.md
include/: defines.h  game.h  misc_util.h
include/client/: client_network.h  game_client.h
include/client/ui/: widget.h
include/common/: defines.h  extensions.h  game.h  game_started_message.h  message.h  message_type.h  misc_util.h
include/server/: communication_round_robin.md  game_server.h  server_network.h
source/client/: client_network.cpp  client_network.h  game_client.cpp  game_client.h  game_context.cpp  game_context.h  main.cpp  sound_manager.cpp  sound_manager.h
source/client/ui/: button.cpp  button.h  image_widget.cpp  image_widget.h  user_interface.cpp  user_interface.h  widget.cpp  widget.h
source/client/ui/components/: button.cpp  button.h  image_widget.cpp  image_widget.h  widget.cpp  widget.h
source/client/ui/widgets/: main_menu.cpp  main_menu.h  user_interface.cpp  user_interface.h
source/common/: defines.h  extensions.h  game.cpp  game.h  game_started_message.h  message_type.h  misc_util.h  player_id.h
source/server/: game_server.cpp  game_server.h  main.cpp  server_network.cpp  server_network.h
src/: game.cpp  main.cpp
src/client/: client_network.cpp  game_client.cpp  main.cpp
src/client/ui/: button.cpp
src/common/: game.cpp
src/server/: game_server.cpp  main.cpp  server_network.cpp
